@@ -147,6 +147,8 @@
               <arg>-Xlint:-preview</arg>
               <arg>-Xlint:all</arg>
               <arg>-Xpkginfo:always</arg>
+              <arg>--add-reads</arg>
+              <arg>org.microbean.bean=java.logging</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -164,7 +166,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>--enable-preview</argLine>
+            <argLine>
+              --enable-preview
+            </argLine>
             <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
             <!-- See https://github.com/apache/maven-surefire/blob/eb48f1b59ca5ccf6954ef33ecab03dbaf93214cd/surefire-providers/surefire-junit-platform/src/main/java/org/apache/maven/surefire/junitplatform/JUnitPlatformProvider.java#L242-L262 -->
             <properties>
@@ -174,6 +178,7 @@
               </configurationParameters>
             </properties>
             <systemPropertyVariables>
+              <java.util.logging.config.file>src/test/java/logging.properties</java.util.logging.config.file>
               <org.microbean.lang.Lang.verbose>${org.microbean.lang.Lang.verbose}</org.microbean.lang.Lang.verbose>
               <project.build.directory>${project.build.directory}</project.build.directory>
               <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
